--- a/src/style/main.css
+++ b/src/style/main.css
@@ -42,7 +42,13 @@ body {
     transition: margin-right .5s;
     padding: 16px;
     text-align: right;
-    display: block
+    display: block;
+}
+.fixedElement {
+    position:fixed;
+    top:0;
+    width:100%;
+    z-index:100;
 }
 #mySidenav {
     display: block;
@@ -51,4 +57,16 @@ body {
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
+}
+.purple {
+    background-color: #5d4275;
+}
+.black {
+    background-color: #3a373d;
+}
+.green {
+    background-color: #50b235;
+}
+.yellow {
+    background-color: #bfc431;
 }
