--- a/src/style/main.css
+++ b/src/style/main.css
@@ -71,6 +71,16 @@ body {
 }
 
 
+.navTitle {
+font-family: 'Lobster', cursive;
+font-size: 30px;
+}
+/*
+font-family: 'Lobster', cursive;
+font-family: 'Gabriela', serif;
+*/
+
+
 
 
 
