nav bar fix and features

--- a/src/js/login/login.css
+++ b/src/js/login/login.css
@@ -2,13 +2,22 @@
      transition: margin-right .5s;
      text-align: right;
      display: none;  
+} 
+body {
+	background-color: black;
+	background-image: url(http://il8.picdn.net/shutterstock/videos/7170334/thumb/1.jpg);
 }
 
 #mySidenav {
     display: none;
     
 }
-
 #loginField {
 	padding-top: 170px;
-}`
+}
+p a {
+	padding-left: 30px;
+}
+html {
+	background-color: black;
+}
