--- a/src/js/login/login.css
+++ b/src/js/login/login.css
@@ -1,23 +1,17 @@
-#main {
-     transition: margin-right .5s;
-     text-align: right;
-     display: none;  
-} 
 body {
-	background-color: black;
-	background-image: url(http://il8.picdn.net/shutterstock/videos/7170334/thumb/1.jpg);
+    background-color: black;
+    background-image: url(http://www.pageresource.com/wallpapers/wallpaper/cute-dog-pictures-background.jpg);
+    background-repeat: no-repeat;
+}
+#mySidenav, #login, div span {
+    display: none;
 }
 
-#mySidenav {
-    display: none;
-    
-}
 #loginField {
-	padding-top: 170px;
+    padding-top: 170px;
 }
+
 p a {
-	padding-left: 30px;
+    padding-left: 30px;
 }
-html {
-	background-color: black;
-}
+
