--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,8 +1,18 @@
+html {
+    height: 100%;
+    padding: 0;
+    margin 0;
+}
 body {
     font-family: "Lato", sans-serif;
     transition: background-color .5s;
-    background-color: white;
+    background-image: none;                     
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
+
 .sidenav {
     height: 100%;
     width: 0;
@@ -37,18 +47,24 @@ body {
     font-size: 36px;
     margin-right: 50px;
 }
-
-#main {
-    transition: margin-right .5s;
-    padding: 16px;
-    text-align: right;
-    display: block;
-}
 #push {
     transition: margin-right .5s;
-    padding: 16px;
-    text-align: left;
     display: block;
+}
+div span {
+    padding-right: 16px;
+    margin-right: 16px;
+    display: block;
+    text-align: right;
+}
+.footer {
+  position: relative;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #efefef;
+  text-align: center;
 }
 .fixedElement {
     position:fixed;
@@ -66,9 +82,21 @@ body {
 }
 
 .navTitle {
-font-family: 'Lobster', cursive;
-font-size: 30px;
+    font-family: 'Lobster', cursive;
+    font-size: 30px;
 }
+#login {
+    display: block;
+}
+div .nav-right {
+    padding-top:15px;
+    padding-right: 60px;
+}
+div .nav-left {
+    padding-left: 60px;
+}
+
+
 /*
 font-family: 'Lobster', cursive;
 font-family: 'Gabriela', serif;
