--- a/src/js/pupInfo/pupInfo.css
+++ b/src/js/pupInfo/pupInfo.css
@@ -17,8 +17,8 @@ ul li {
 }
 
 .font {
-	font-family: 'Gabriela', serif;
-}
+/*	font-family: 'Gabriela', serif;
+*/}
 
 .blueTile {
 	text-align: center;
@@ -41,4 +41,8 @@ ul li {
 
 .medText {
 	font-size: 15px;
+}
+
+.fitTitle {
+	padding-left: 20px;
 }
