--- a/src/js/overview/overview.css
+++ b/src/js/overview/overview.css
@@ -1,13 +1,52 @@
+/************ PUP Stuff ************/
+.pupProfilePic {
+	 border-top-right-radius:1%;
+	 border-top-left-radius:1%;
+}
+
 .pupPhoto {
 	width: 100px;
     height: auto;
 }
+
 .pupName {
 	font-family: 'Lobster', cursive;
 	font-size: 20px;
+	color: white;
 }
+
+.pupCard {
+
+	    border: 2px solid white;
+    	border-radius: 5px;
+    	background-color: #12476B;	
+}
+
+.pupCardText {
+
+}
+
+.pupName {
+	font-family: 'Lobster', cursive;
+	font-size: 20px;
+	text-align: center;
+	padding-left: 30px;
+}
+.pupInfo {
+	text-align: center;
+	color: white;
+}
+
+
+/********* User Section **********/
+.profilePicBoarder{
+	padding-top: 30px;
+	padding-left: 30px;
+}
+
 .profilePic {
-	border-radius: 50%;
+    border: 2px solid white;
+    border-radius: 5px;
 }
 
 .userInfo {
@@ -16,19 +55,14 @@
 
 .vetVisit {
 	font-size: 20px;
+	color: white;
 }
 
 .profileTitle {
 	font-family: 'Lobster', cursive;
-	font-size: 30px;
+	font-size: 35px;
 	padding-right: 80px;
-}
-
-.pupName {
-	font-family: 'Lobster', cursive;
-	font-size: 20px;
-	text-align: center;
-	padding-left: 30px;
+	color: white;
 }
 
 .fontGabriela
@@ -39,6 +73,7 @@
 .addPup {
 	font-size: 80px;
 	text-align: center;
+	color: white;
 
 }
 
@@ -47,9 +82,49 @@
 	font-weight: bold;
 }
 
-.pupInfo {
-	text-align: center;
+.ownerInfo {
+	font-size: 17px;
 }
+/*********** Table *****************/
+
+.todoBackground {
+	background-color: white;
+}
+
+.todoTable {
+	padding-left: 20px;
+	padding-bottom: 40px;
+	opacity: .9;
+}
+
+.todoTableColor {
+	background-color:  #BA3B46;
+
+}
+
+.tableHeader {
+	text-align: center;
+	color: white;
+	font-size: 20px;
+	font-weight: bold;
+}
+
+.footerPadding {
+	padding-bottom: 100px;
+}
+
+.todoCheckMark {
+	text-align: center;
+	font-size: 20px;
+}
+
+.todoAdd {
+	text-align: center;
+	font-size: 20px;
+	color: #DCDBA8;
+}
+
+/*********** Nav *****************/
 
 a.editable-click { 
     color: green;
@@ -64,7 +139,44 @@ a.editable-click:hover {
 	text-align: left;
 }
 
+/************ Overview *************/
+
+.overviewBG {
+	background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ), url("picture1.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;	
+      -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.fontColor {
+	color: white;
+}
+
+.noOverflow {
+	white-space: nowrap;
+  overflow: hidden;
+}
+
+
+/*.placeholder {
+background-repeat: no-repeat;
+background-position: top right;
+background-image: url('puppy.png');
+border-radius: 30%;
+}
+*/
 /*
 font-family: 'Lobster', cursive;
 font-family: 'Gabriela', serif;
 */
+
+
+
+
+
+
+
+
