--- a/src/js/login/login.css
+++ b/src/js/login/login.css
@@ -1,6 +1,6 @@
-body {
-	background-color: white;
-}
+/*body {
+	background-color: blue;
+}*/
 #mySidenav, #login, div span {
     display: none;
 }
