--- a/src/js/parks/parks.css
+++ b/src/js/parks/parks.css
@@ -1,6 +1,19 @@
-body, 
+/*body, 
 #map{
   height: 100%;
   margin: 0px;
   padding: 0px;
+}*/
+
+.parksBackground {
+	color: white;
+
+	background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ), url("../../js/overview/picture1.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;	
+      -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+ 
 }
