--- a/src/js/addPup/addPup.css
+++ b/src/js/addPup/addPup.css
@@ -7,3 +7,13 @@
 	display: inline;
 	align-content: right;
 }
+#yoda {
+	margin-top: 120px;
+}
+#yoda h2 {
+	font-size: 30px;
+}
+#yoda img {
+	margin-left: 70px;
+	border: none;
+}
