--- a/src/style/main.css
+++ b/src/style/main.css
@@ -72,7 +72,7 @@ main {
   padding: 1rem;
   background-color: black;
   text-align: center;
-
+  height: 50px;
 
 }
 .fixedElement {
@@ -118,6 +118,12 @@ div .nav-left {
 }
  .click {
     padding-top: 8px;
+}
+#rouge {
+    color: black;
+}
+#rouge:hover {
+    color: gold;
 }
 /*
 font-family: 'Lobster', cursive;
