--- a/src/js/events/events.css
+++ b/src/js/events/events.css
@@ -1,3 +1,8 @@
+.overviewBG {
+    margin: 0;
+    height: 100%;
+    background-image: url("picture1.jpg");
+}
 .paddingTop {
 	padding-top: 10px;
 }
