--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,22 +1,30 @@
+// html {
+//     height: 100%;
+//     padding: 0;
+//     margin 0;
+// }
+// body {
+//     font-family: "Lato", sans-serif;
+//     background-image: none;                     
+//     height: 100%;
+//     width: 100%;
+//     margin-bottom: 10;
+//     padding: 0;
+//     display: flex;
+//     min-height: 100vh;
+//     flex-direction: column;
+// }
 html {
-    height: 100%;
-    padding: 0;
-    margin 0;
+  height: 100%;
+  margin: 0;
+  
 }
 body {
-    font-family: "Lato", sans-serif;
-    transition: background-color .5s;
-    background-image: none;                     
-    height: 100%;
-    width: 100%;
-    margin-bottom: 10;
-    padding: 0;
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
+  height: 100%;
+  margin: 0;
 }
 
-main {
+.main {
     flex: 1 0 auto;
   }
 
@@ -65,14 +73,12 @@ main {
     text-align: right;
 }*/
 .footer {
-  position: fixed;
   right: 0;
   bottom: 0;
   left: 0;
-  padding: 1rem;
   background-color: black;
   text-align: center;
-  height: 50px;
+  height: 60px;
 
 }
 .fixedElement {
