--- a/src/js/login/login.css
+++ b/src/js/login/login.css
@@ -12,16 +12,32 @@
 }
 
 .loginImage {
-	background-image: url("BlackDog.jpg");
+	background-image: url("giphy.gif");
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: 30% 20%;
+    background-size: cover;
+    opacity: .7;
 }
 
 .heroText {
 	color: white;
+	font-family: 'Lobster', cursive;
+	font-weight: bold;
+	font-size: 75px
+
 }
 
+.fontColor {
+	color: white;
+}
+
+
 #hi {
-    background-color: slategrey;
+    background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../overview/picture1.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
