--- a/src/js/pupInfo/pupInfo.css
+++ b/src/js/pupInfo/pupInfo.css
@@ -1,85 +1,89 @@
-
-
 .dogName {
-	    text-align: center;
-	    font-family: 'Lobster', cursive;
-		font-size: 80px;
+    text-align: center;
+    font-family: 'Lobster', cursive;
+    font-size: 80px;
 }
 
 .font {
-/*	font-family: 'Gabriela', serif;
-*/}
+    /*	font-family: 'Gabriela', serif;
+*/
+}
 
 .blueTile {
-	text-align: center;
+    text-align: center;
 }
 
 .medRecord {
-	display: inline;
+    display: inline;
 }
 
 .pupMedTitle {
-	font-family: 'Lobster', cursive;
-	text-align: center;
-	font-size: 20px;
+    font-family: 'Lobster', cursive;
+    text-align: center;
+    font-size: 20px;
 }
 
 .medSubTitle {
-	text-align: center;
-	font-size: 20px;
+    text-align: center;
+    font-size: 20px;
 }
 
 .medText {
-	font-size: 11px;
+    font-size: 13px;
 }
 
 .fitTitle {
-	padding-left: 20px;
+    padding-left: 20px;
 }
 
 .pupInfoBackground {
-		background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ), url("../overview/picture1.jpg");
+    background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../overview/picture1.jpg");
     background-repeat: no-repeat;
-    background-attachment: fixed;	
-      -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 form input {
-	border: none;
-	background: transparent;
+    border: none;
+    background: transparent;
 }
 
 .medDate {
-	font-size: 11px;
-	color: #3273dc;
+    font-size: 15px;
+    color: white;
 }
 
 .editPup {
-		text-align: right;
-	color: white;
-	font-size: 20px;
+    text-align: right;
+    color: white;
+    font-size: 20px;
 }
 
 .pupInfoInput {
-		color: #3273dc;;
-	font-size: 14px;
-	width: 100px;
-		border: none;
-	background: transparent;
+    color: #3273dc;
+    ;
+    font-size: 14px;
+    width: 100px;
+    border: none;
+    background: transparent;
 }
 
 .pictureBorder {
-	    border: 2px solid white;
+    border: 2px solid white;
     border-radius: 5px;
 }
 
 .logItBtn {
-	padding-top: 20px;
+    padding-top: 20px;
 }
 
 .bottomTable {
-	margin-bottom: 75px;
+    margin-bottom: 75px;
+}
+
+.removePupButton {
+    padding-left: 35px;
 }
